cabal-version:      2.4
name:               yinsh
version:            0.2.0.0
synopsis:           The board game Yinsh, including AI opponent
bug-reports:        https://github.com/sharkdp/yinsh
license:            MIT
author:             David Peter
maintainer:         mail@david-peter.de
category:           Game
extra-source-files:
    README.md

library
    exposed-modules:
        Yinsh
        AI
        Floyd

    other-extensions: BangPatterns FlexibleInstances UndecidableInstances
    build-depends:
        base ^>=4.16.4.0,
        containers ^>=0.6.5.1,
        game-tree ^>=0.1.0.0

    hs-source-dirs:   src
    default-language: Haskell2010

executable yinsh-backend
    main-is:          Main.hs

    other-extensions: BangPatterns FlexibleInstances UndecidableInstances
    build-depends:
        base ^>=4.16.4.0,
        containers ^>=0.6.5.1,
        happstack-server ^>=7.8.0.2,
        happstack-server-tls ^>=7.2.1.3,
        yinsh

    hs-source-dirs:   backend
    default-language: Haskell2010
    ghc-options: -threaded -rtsopts
